Cambios de navegacion y cant al agregar un prod